<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>es.uvigo.esei.aed2</groupId>
	<artifactId>activities</artifactId>
	<version>1.0.0-SNAPSHOT</version>

	<name>AEDII - Activities</name>
	<inceptionYear>2025</inceptionYear>

	<organization>
		<name>Escola Superior de Enxeñaría Informática - Universidade de Vigo</name>
		<url>https://esei.uvigo.es/</url>
	</organization>

	<contributors>
		<contributor>
			<name>Rosalía Laza Fidalgo</name>
			<organization>SING Group - University of Vigo</organization>
			<organizationUrl>https://esei.uvigo.es/</organizationUrl>
			<email>rlaza@uvigo.gal</email>
		</contributor>
		<contributor>
			<name>María Reyes Pavón Rial</name>
			<organization>SING Group - University of Vigo</organization>
			<organizationUrl>https://esei.uvigo.es/</organizationUrl>
			<email>pavon@uvigo.gal</email>
		</contributor>
		<contributor>
			<name>Florentino Fernández Riverola</name>
			<organization>SING Group - University of Vigo</organization>
			<organizationUrl>https://esei.uvigo.es/</organizationUrl>
			<email>riverola@uvigo.gal</email>
		</contributor>
		<contributor>
			<name>María Novo Lourés</name>
			<organization>SING Group - University of Vigo</organization>
			<organizationUrl>https://esei.uvigo.es/</organizationUrl>
			<email>manovo@uvigo.gal</email>
		</contributor>
		<contributor>
			<name>Miguel Reboiro Jato</name>
			<organization>SING Group - University of Vigo</organization>
			<organizationUrl>https://esei.uvigo.es/</organizationUrl>
			<email>mrjato@uvigo.gal</email>
		</contributor>
	</contributors>

	<licenses>
		<license>
			<name>MIT-License</name>
			<url>https://opensource.org/licenses/MIT</url>
			<distribution>manual</distribution>
		</license>
	</licenses>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		
		<license.licenseName>mit</license.licenseName>
		<license.copyrightOwners>Rosalía Laza Fidalgo, María Reyes Pavón Rial,
Florentino Fernández Riverola, María Novo Lourés, and Miguel Reboiro Jato</license.copyrightOwners>
	</properties>

	<repositories>

		<repository>
			<id>sing-maven-releases</id>
			<name>SING Maven Releases</name>
			<url>https://maven.sing-group.org/repository/maven-releases/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>

		<repository>
			<id>sing-maven-snapshots</id>
			<name>SING Maven Snapshots</name>
			<url>https://maven.sing-group.org/repository/maven-snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>
        
        <distributionManagement>
		<repository>
			<id>sing-maven-releases</id>
			<name>SING Maven Releases</name>
			<url>https://maven.sing-group.org/repository/maven-releases/</url>
		</repository>

		<snapshotRepository>
			<id>sing-maven-snapshots</id>
			<name>SING Maven Snapshots</name>
			<url>https://maven.sing-group.org/repository/maven-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>5.8.2</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

        <dependencies>
            <dependency>
                <groupId>es.uvigo.esei.aed1</groupId>
                <artifactId>tads</artifactId>
                <version>1.0.12</version>
            </dependency>
            <dependency>
                <groupId>es.uvigo.esei.aed2</groupId>
                <artifactId>tads</artifactId>
                <version>2.0.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>es.uvigo.esei.aed2</groupId>
                <artifactId>tads</artifactId>
                <version>2.0.0-SNAPSHOT</version>
                <scope>test</scope>
                <type>test-jar</type>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest-library</artifactId>
                <version>2.2</version>
                <scope>test</scope>
            </dependency>
        </dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<includes>
						<include>**/*TestCase.java</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.2</version>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
                                                    <goal>test-jar</goal>
                                                    <goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.3.2</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
                        <plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.13</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>2.5.0</version>
				<executions>
					<execution>
						<id>first</id>
						<goals>
							<goal>update-file-header</goal>
						</goals>
						<phase>process-sources</phase>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>